--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(socket)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(socket 9-epoll.cpp 9_5.cpp)
+add_executable(socket chatroom_server.cpp)
